src/objects/Campaign_Project_Direct_Mail_Vendor__c.object
<CustomObject>
    <description>Campaign Project Direct Mail Vendor</description>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <description>Campaign Project for this vendor</description>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Campaign Project Direct Mail Vendor</relationshipLabel>
        <relationshipName>Campaign_Project_Direct_Mail_Vendor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <formula>Vendor__r.Primary_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Phone__c</fullName>
        <formula>Vendor__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct Mail Vendor</description>
        <inlineHelpText>Direct Mail Vendor</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Marketing_Delivery_Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Project Direct Mail Vendor</relationshipLabel>
        <relationshipName>Campaign_Project_Direct_Mail_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Project Direct Mail Vendor</label>
    <nameField>
        <displayFormat>CPP-{000000000}</displayFormat>
        <label>Campaign Project Direct Mail Vendor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Direct Mail Vendor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>